@@ -1,9 +1,11 @@
 package io.nirahtech.erp.bank;
 
 import java.math.BigDecimal;
+import java.util.Arrays;
 import java.util.HashSet;
 import java.util.Objects;
 import java.util.Set;
+import java.util.stream.Collectors;
 
 class DefaultFinancialTransactionExecutor implements FinancialTransactionExecutor {
 
@@ -11,15 +13,15 @@ class DefaultFinancialTransactionExecutor implements FinancialTransactionExecuto
 
     DefaultFinancialTransactionExecutor() {
         this.financialRules.add((transaction) -> Objects.nonNull(transaction));
-        this.financialRules.add((transaction) -> !transaction.debtor().equals(transaction.credit()));
-        this.financialRules.add((transaction) -> transaction.amount().floatValue() > 0.0F);
-        this.financialRules.add((transaction) -> transaction.debtor().getBalance().compareTo(new BigDecimal(0.0F)) == 1 );
-        this.financialRules.add((transaction) -> transaction.debtor().getBalance().subtract(transaction.amount()).compareTo(new BigDecimal(0.0F)) >= 0);
+        this.financialRules.add((transaction) -> !transaction.getDebtor().equals(transaction.getCredit()));
+        this.financialRules.add((transaction) -> transaction.getAmount().floatValue() > 0.0F);
+        this.financialRules.add((transaction) -> transaction.getDebtor().getBalance().compareTo(new BigDecimal(0.0F)) == 1 );
+        this.financialRules.add((transaction) -> transaction.getDebtor().getBalance().subtract(transaction.getAmount()).compareTo(new BigDecimal(0.0F)) >= 0);
     }
 
     @Override
     public void addFinancialRules(FinancialRule... financialRules) {
-        this.financialRules.addAll(Set.of(financialRules));
+        this.financialRules.addAll(Arrays.asList(financialRules));
     }
 
     @Override
@@ -27,14 +29,14 @@ class DefaultFinancialTransactionExecutor implements FinancialTransactionExecuto
         final boolean canBeExecuted = this.financialRules
                 .stream()
                 .filter(rule -> !rule.isAllowed(transaction))
-                .toList()
+                .collect(Collectors.toList())
                 .isEmpty();
 
         if (canBeExecuted) {
-            transaction.debtor().debt(transaction.amount(), transaction.currency());
-            transaction.debtor().getFinancialTransactionLogbook().writeTransaction(transaction);
-            transaction.credit().credit(transaction.amount(), transaction.currency());
-            transaction.credit().getFinancialTransactionLogbook().writeTransaction(transaction);
+            transaction.getDebtor().debt(transaction.getAmount(), transaction.getCurrency());
+            transaction.getDebtor().getFinancialTransactionLogbook().writeTransaction(transaction);
+            transaction.getCredit().credit(transaction.getAmount(), transaction.getCurrency());
+            transaction.getCredit().getFinancialTransactionLogbook().writeTransaction(transaction);
         }
     }
     
