@@ -1,10 +1,12 @@
 package io.nirahtech.erp.bank;
 
 import java.time.LocalDateTime;
+import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.HashSet;
 import java.util.Set;
+import java.util.stream.Collectors;
 
 public final class FinancialTransactionLogbook {
     private boolean isReadOnly = false;
@@ -21,9 +23,9 @@ public final class FinancialTransactionLogbook {
     public final Collection<FinancialTransaction> listTransactions(LocalDateTime from, LocalDateTime to) {
         return Collections.unmodifiableCollection(
                 this.transactions.stream().filter((transaction) -> {
-                    return transaction.timestamp().isAfter(from) && transaction.timestamp().isBefore(to);
+                    return transaction.getTimestamp().isAfter(from) && transaction.getTimestamp().isBefore(to);
                 })
-            .toList());
+            .collect(Collectors.toList()));
     }
 
     public final void writeTransaction(final FinancialTransaction financialTransaction) {
@@ -34,7 +36,7 @@ public final class FinancialTransactionLogbook {
 
     public final void writeAllTransactions(final FinancialTransaction... financialTransactions) {
         if (!this.isReadOnly) {
-            this.transactions.addAll(Set.of(financialTransactions));
+            this.transactions.addAll(Arrays.asList(financialTransactions));
         }
     }
 
